# imagine-freediving

./: README.md  pyproject.toml
imagine_freediving/: audio.py  cli.py  video.py  visualize.py  visualize_mp3.py  visualize_mp4.py
imagine_freediving/overlays/: dive_telemetry.py  label.py
imagine_freediving/subcommands/: overlay.py  visualize.py
